#887 Initial context key draft